--- a/JiaoBaoYun-hb/html/micro-course/history-records.html
+++ b/JiaoBaoYun-hb/html/micro-course/history-records.html
@@ -100,78 +100,13 @@
 				word-wrap: break-word;
 			}
 
-			.mui-table-view:before,
-			.mui-table-view:after,
-			.section-top .mui-table-view-cell:after,
-			.section-comment .mui-table-view-cell:after {
-				height: 0px;
-			}
-
-			.mui-table-view-cell.mui-collapse.mui-active {
-				margin-top: 0;
-			}
-
-			.section-top {
-				display: none;
-			}
-
-			.section-top .mui-navigate-right {
-				width: 21px;
-				height: 21px;
-				position: absolute;
-				right: 10px;
-			}
-
-			.section-top .mui-navigate-right:after {
-				content: "\e581";
-				right: 5px;
-			}
-
-			.mui-collapse {
-				padding: 0px;
-			}
-
-			.mui-table-view-cell.mui-collapse .mui-collapse-content {
-				margin: 0px;
-				padding: 11px 15px;
-				padding-top: 0px;
-			}
-
-			.mui-collapse-content {
-				font-size: 14px;
-				color: #808080;
-			}
-
-			.section-top .mui-table-view-cell>a:not(.mui-btn).mui-active,
-			.section-top .mui-table-view-cell.mui-active,
-			.section-comment .mui-table-view-cell.mui-active,
-			.section-shield .mui-table-view-cell.mui-active {
-				background-color: white;
-			}
-
-			.mui-bar-tab button {
-				/*评论按钮*/
-				text-align: left;
-				padding: 6px 12px !important;
-				color: #B7B7B7;
-				margin: 6px 1.5% !important;
-				width: 96%;
-				top: 0 !important;
-				height: 36px;
-				font-size: 14px;
-			}
-
 			.section-title {
 				font-size: 16px;
 				color: #323232;
 			}
 
-			.section-top .section-title {
-				margin-right: 15px;
-			}
-
 			.section-list .mui-table-view-cell {
-				padding: 8px 15px;
+				/*padding: 8px 15px;*/
 			}
 
 			.section-list .section-title {
@@ -185,33 +120,9 @@
 				font-size: 14px;
 			}
 
-			.section-top .section-info {
-				margin-top: -11px !important;
-			}
-
 			.section-info .mui-pull-right {
 				display: inline;
 			}
-
-			.icon-zanzan1 {
-				font-size: 13px;
-				color: #dbdbdb;
-			}
-
-			.section-more {
-				/*查看更多*/
-				display: none;
-				text-align: center;
-				color: #B7B7B7;
-				font-size: 14px;
-			}
-
-			.section-more .mui-icon-arrowdown {
-				font-size: 14px;
-			}
-			/*.section-list {
-				margin-top: 8px;
-			}*/
 
 			.section-list-li {
 				display: flex;
@@ -221,6 +132,7 @@
 
 			.section-list-li-left {
 				width: 65%;
+				float: left;
 			}
 
 			.section-list-img-div {
@@ -231,36 +143,32 @@
 			}
 
 			.section-list-img {
-				/*课程列表图片的*/
+				/*课程列表图片*/
 				visibility: hidden;
 				width: 100%;
 			}
 
-			.section-image-play-div {
-				position: absolute;
-				right: 15px;
+			.section-list-img-mask {
+				/*课程列表图片遮罩*/
 				background-color: rgba(0, 0, 0, 0.5);
-				visibility: hidden;
+				position: absolute;
 			}
 
 			.section-image-play {
 				/*视频播放按钮*/
-				width: 40px;
-				height: 40px;
+				position: absolute;
+				width: 35px;
+				height: 35px;
 			}
 
 			.section-image-time {
 				/*视频的时间*/
 				position: absolute;
+				font-size: 12px;
 				color: white;
-				top: 85%;
-				right: 5%;
-			}
-
-			.section-comment-info,
-			.section-comment-reply-info,
-			.section-comment-reply-content {
-				display: inline;
+				right: 5px;
+				bottom: 0px;
+				line-height: 21px;
 			}
 
 			.section-list-audio {
@@ -282,109 +190,6 @@
 			.section-list-audio-time {
 				fill: #B7B7B7;
 				font-size: 15px;
-			}
-
-			.section-comment-title {
-				/*评论栏标题*/
-				display: none;
-				background-color: #F2F2F2;
-				padding: 10px;
-				border-left: 3px solid #1DB8F1;
-				font-size: 15px;
-				color: #323232;
-				height: 40px;
-			}
-
-			.section-comment-personal-headimage {
-				/*评论者头像*/
-				width: 40px;
-				height: 40px;
-				border-radius: 50%;
-				float: left;
-				margin-right: 10px;
-			}
-
-			.section-comment .icon-zanzan1 {
-				/*评论点赞按钮*/
-				float: right;
-				line-height: 40px;
-				margin-left: 30px;
-			}
-
-			.section-comment-personal-name {
-				/*评论者昵称*/
-				font-size: 15px;
-				color: #323232;
-				line-height: 40px;
-			}
-
-			.section-comment-content {
-				/*评论的内容*/
-				margin: 11px 0;
-				color: #808080;
-				font-size: 14px;
-			}
-
-			.section-comment-reply {
-				/*评论回复区域*/
-				font-size: 14px;
-				background-color: #F2F2F2;
-				padding: 5px;
-				margin-top: 11px;
-			}
-
-			.section-comment-reply-name {
-				/*回复者的名称*/
-				display: inline;
-				color: #1DB8F1;
-				font-size: 14px;
-			}
-
-			.section-comment-reply-all {
-				/*查看所有回复*/
-				color: #1DB8F1;
-				font-size: 14px;
-			}
-
-			.section-comment-reply-content {
-				font-size: 14px;
-				color: #808080;
-			}
-
-			.section-shield {
-				/*节次屏蔽*/
-				display: none;
-				background-color: white;
-				justify-content: center;
-				align-items: center;
-				height: 200px;
-				text-align: center;
-			}
-
-			.section-shield .icon-jinggao-copy {
-				font-size: 120px;
-				color: #dbdbdb;
-				padding-top: 5px;
-			}
-
-			.section-shield .section-shield-text {
-				font-size: 14px;
-				color: #999999;
-			}
-
-			.section-show .section-title {
-				/*当前显示的节次*/
-				color: #00A5E0;
-			}
-
-			.section-comment-zan {
-				/*点赞*/
-				color: #1db8f1;
-			}
-
-			.section-comment-notzan {
-				/*不点赞*/
-				color: #dbdbdb;
 			}
 		</style>
 	</head>
@@ -426,6 +231,7 @@
 				//events.closeWaiting();
 				var wd = events.showWaiting();
 				initData();
+				courseDetails.init();
 				initControl();
 				initListener();
 				getAllSectionsAndComments(pageIndex + 1, wd);
@@ -560,19 +366,21 @@
 					if(data[i].EncType == 1) { //视频
 						ele.className = "mui-table-view-cell section-list-li";
 						html = '<div class="section-list-li-left">\
-							<div class="section-title">' + data[i].SecName + '</div>\
-							<div class="section-info">上传时间 : ' + data[i].UpTime.split(" ")[0] + '</div>\
-						</div>\
-						<div class="section-list-img-div">\
-							<div class="section-image-play-div">\
-								<img src="../../image/utils/playvideo.png" class="section-image-play" onload="courseDetails.onPlayLoad(this);" onerror="courseDetails.onPlayError(this);" />\
-							</div>\
-							<div class="section-image-time">' + courseDetails.getAudioTime(data[i].EncLen) + '</div>\
-							<img src="' + data[i].EncImgAddr + '" class="section-list-img" onload="courseDetails.onImageLoad(this);" onerror="courseDetails.onImageError(this);" />\
-						</div>';
+									<div class="section-title mui-ellipsis-2">' + data[i].SecName + '</div>\
+									<div class="section-info">上传时间 : ' + data[i].UpTime.split(" ")[0] + '</div>\
+								</div>\
+								<div class="section-list-img-div">\
+									<div class="section-list-img" style="height:' + courseDetails.height + 'px;">\
+										<img src="' + data[i].EncImgAddr + '" class="section-list-img" onload="courseDetails.onImageLoad(this);" onerror="courseDetails.onImageError(this);"/>\
+									</div>\
+									<div class="section-list-img-mask" style="height:' + courseDetails.height + 'px;width:' + courseDetails.width + 'px;margin-top:' + (-courseDetails.height) + 'px;">\
+										<img src="../../image/utils/playvideo.png" class="section-image-play" style="margin-top:' + courseDetails.playMarginTop + 'px;margin-left:' + courseDetails.playMarginLeft + 'px;"/>\
+										<div class="section-image-time">' + courseDetails.getAudioTime(data[i].EncLen) + '</div>\
+									</div>\
+								</div>';
 					} else if(data[i].EncType == 2) { //音频
 						ele.className = "mui-table-view-cell";
-						html = '<div class="section-title">' + data[i].SecName + '</div>\
+						html = '<div class="section-title mui-ellipsis-2">' + data[i].SecName + '</div>\
 						<div>\
 							<svg class="section-list-audio">\
 								<path class="section-list-audio-border" d="' + courseDetails.getAudioBorderPath() + '" />\
@@ -582,18 +390,20 @@
 						</div>\
 						<div class="section-info">上传时间 : ' + data[i].UpTime.split(" ")[0] + '</div>';
 					} else if(data[i].EncType == 3) { //文章
-						if(data[i].EncImgAddr == "") { //没有图片
+						if(!data[i].EncImgAddr) { //没有图片
 							ele.className = "mui-table-view-cell";
 							html = '<div class="section-title">' + data[i].SecName + '</div>\
 							<div class="section-info">上传时间 : ' + data[i].UpTime.split(" ")[0] + '</div>';
 						} else {
 							ele.className = "mui-table-view-cell section-list-li";
 							html = '<div class="section-list-li-left">\
-									<div class="section-title">' + data[i].SecName + '</div>\
+									<div class="section-title mui-ellipsis-2">' + data[i].SecName + '</div>\
 									<div class="section-info">上传时间 : ' + data[i].UpTime.split(" ")[0] + '</div>\
 								</div>\
 								<div class="section-list-img-div">\
-									<img src="' + data[i].EncImgAddr + '" class="section-list-img" onload="courseDetails.onImageLoad(this);" onerror="courseDetails.onImageError(this);" />\
+									<div class="section-list-img" style="height:' + courseDetails.height + 'px;">\
+										<img src="' + data[i].EncImgAddr + '" class="section-list-img" onload="courseDetails.onImageLoad(this);" onerror="courseDetails.onImageError(this);"/>\
+									</div>\
 								</div>';
 						}
 					}
