--- a/JiaoBaoYun-hb/html/micro-course/course_details.html
+++ b/JiaoBaoYun-hb/html/micro-course/course_details.html
@@ -994,7 +994,6 @@
 										<div class="section-image-time">' + courseDetails.getAudioTime(data[i].EncLen) + '</div>\
 									</div>\
 								</div>';
-						console.log("html:" + html);
 					} else if(data[i].EncType == 2) { //音频
 						ele.className = "mui-table-view-cell";
 						html = '<div class="section-title mui-ellipsis-2">' + data[i].SecName + '</div>\
@@ -1239,6 +1238,7 @@
 					document.getElementById("section_top_title").style.marginRight = collapse_content_show.offsetWidth + 6 + "px";
 					video.src = fpath;
 					video.style.backgroundImage = "url(" + thumb + ")";
+					video.load();
 				} else if(type == 2) { //音频
 					document.getElementById("scroll_wrapper").style.top = "144px";
 					document.getElementById("video_area").style.display = "none";
