--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -33,14 +33,14 @@
 
 		<!--底部选项卡（.mui-bar-tab）-->
 		<nav id="nav_tab" class="mui-bar mui-bar-tab">
-			<a id="defaultTab" class="mui-tab-item mui-active" style="display: none;" href="../cloud/cloud_home.html">
+			<!--<a id="defaultTab" class="mui-tab-item mui-active" style="display: none;" href="../cloud/cloud_home.html">
 				<span class="mui-icon iconfont icon-shangchuanyunduan"></span>
 				<span class="mui-tab-label">云盘</span>
 			</a>
 			<a id="tabclass" class="mui-tab-item" href="../sciedu/sciedu_home.html">
 				<span class="mui-icon iconfont icon-jiaoyu1"></span>
 				<span class="mui-tab-label">科教</span>
-			</a>
+			</a>-->
 			<a id="bottom-show" class="mui-tab-item" href="../show/show-home1.html">
 				<span class="mui-icon iconfont icon-dongtai"></span>
 				<span class="mui-tab-label">发现</span>
@@ -48,6 +48,10 @@
 			<a class="mui-tab-item" href="../micro-course/course-home1.html">
 				<span class="mui-icon iconfont icon-class"></span>
 				<span class="mui-tab-label">微学</span>
+			</a>
+			<a class="mui-tab-item" href="mine.html">
+				<span class="mui-icon iconfont icon-person"></span>
+				<span class="mui-tab-label">我的</span>
 			</a>
 		</nav>
 	</body>
