--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -11,37 +11,53 @@
 		<link rel="stylesheet" href="../../css/home/index.css" />
 		<link rel="stylesheet" href="../../css/utils/slide_navigatian.css" />
 		<style type="text/css">
-			.mui-bar{
+			.mui-bar {
 				box-shadow: 0 0 1px #dbdbdb;
 				background-color: white;
 			}
+			
 			.mui-bar-tab .mui-tab-item.mui-active {
 				color: #00a5e01;
 			}
+			
+			.mui-slider-indicator {
+				margin-left: -10px;
+				bottom: -3px;
+			}
+			
+			.mui-slider-indicator .mui-indicator {
+				margin: 1px 2px;
+			}
+			header a.img-icon{
+				padding-top: 7px;
+			}
+			.img-icon{
+				width: 44px;
+				height: 44px;
+				text-align: center;
+				padding-top:7px ;
+			}
+			.img-icon img{
+				border-radius: 50%;
+			}
+
 		</style>
 	</head>
 
 	<body>
 
-		<!--<header id="index-header" class="mui-bar mui-bar-nav common-background-bar">
-			<div id="title_left"></div>
-			<h1 id="title" class="mui-title"></h1>
-			<div id="random_icon">
-				<h1 id="title" class="mui-title"></h1>
+		<header class="mui-bar mui-bar-nav">
+			<a class="img-icon"><img src="../../image/utils/default_personalimage.png" style="margin-top: 7px; width: 30px;height: 30px;border-radius: 50%;" /></a>
+			<h1 class="mui-title">关注</h1>
+			<div id="header-indicator" class="mui-slider-indicator">
+				<div class="mui-indicator mui-active"></div>
+				<div class="mui-indicator"></div>
 			</div>
-		</header>-->
-
+			<a id="publish-show" class="mui-pull-right">发布</a>
+		</header>
 		<!--底部选项卡（.mui-bar-tab）-->
 		<nav id="nav_tab" class="mui-bar mui-bar-tab">
-			<!--<a id="defaultTab" class="mui-tab-item mui-active" style="display: none;" href="../cloud/cloud_home.html">
-				<span class="mui-icon iconfont icon-shangchuanyunduan"></span>
-				<span class="mui-tab-label">云盘</span>
-			</a>
-			<a id="tabclass" class="mui-tab-item" href="../sciedu/sciedu_home.html">
-				<span class="mui-icon iconfont icon-jiaoyu1"></span>
-				<span class="mui-tab-label">科教</span>
-			</a>-->
-			<a id="bottom-show" class="mui-tab-item" href="../show/show-home1.html">
+			<a id="bottom-show" class="mui-tab-item mui-active" href="../show/show-home1.html">
 				<span class="mui-icon iconfont icon-dongtai"></span>
 				<span class="mui-tab-label">发现</span>
 			</a>
@@ -49,16 +65,14 @@
 				<span class="mui-icon iconfont icon-class"></span>
 				<span class="mui-tab-label">微学</span>
 			</a>
-			<a class="mui-tab-item" href="mine.html">
-				<span class="mui-icon iconfont icon-person"></span>
-				<span class="mui-tab-label">我的</span>
-			</a>
+
 		</nav>
 	</body>
 	<script src="../../js/mui.min.js"></script>
 	<script src="../../js/utils/events.js"></script>
 	<script src="../../js/utils/app-update.js"></script>
 	<script type="text/javascript" src="../../js/utils/Statusbar.js"></script>
+	<script src="../../js/main/off-canvas.js"></script>
 	<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript" src="../../js/publicHomeworkProtocol.js"></script>
 	<script type="text/javascript" src="../../js/index.js"></script>
