--- a/JiaoBaoYun-hb/html/show/show-detail.html
+++ b/JiaoBaoYun-hb/html/show/show-detail.html
@@ -29,7 +29,7 @@
 							{{getSimpleDate(showDetail.PublishDate)}}
 						</div>
 					</div>
-					<button v-if="!isSelfDynamic" class="attention-btn btn-unfocus" v-bind:class="{'btn-focused':showDetail.IsFocused}" v-on:tap="toggleFocus">{{showDetail.IsFocused?'已关注':'关注'}}</button>
+					<button v-if="!isSelfDynamic" class="attention-btn btn-unfocus" v-bind:class="{'btn-focused':showDetail.IsFocused}" v-on:tap="toggleFocus">{{getFocused(showDetail)?'已关注':'关注'}}</button>
 				</div>
 				<div v-if="showDetail.EncType === 5" class="show-content" v-html="showDetail.MsgContent"></div>
 				<div v-else class="show-content">{{showDetail.MsgContent}}</div>
