--- a/JiaoBaoYun-hb/html/micro-course/course-home1.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-home1.html
@@ -123,7 +123,7 @@
 			 * @param {Object} type 0 只有全部 10 显示全部 11 显示关注
 			 */
 			function setTitle(type) {
-				myStorage.setItem(storageKeyName.COURSETYPE, type);
+				myStorage.setItem(storageKeyName.COURSETYPE, type.toString());
 				mui.fire(plus.webview.currentWebview().parent(), "showTitle", {
 					flag: 1,
 					type: type
